<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string
        name="app_name">BikeHeaven</string>
    <string
        name="maps_activity">Climb map</string>
    <string
        name="list_activity">Climb list</string>
    <string
        name="navigation_activity">Navigation</string>
    <string
        name="settings_activity">Settings</string>
    <string
        name="climbinfo_activity">Climb informations</string>
    <string
        name="app_info">"About BikeHeaven</string>
    <string
        name="climb_profile">Show climb profile</string>
    <string
        name="climb_map">Show climb map</string>
    <string
        name="climb_link">Show climb page</string>
    <string
        name="checkbox_meta">Show climb finish (instead of climb start)</string>
    <string
        name="checkbox_regions">Region mode</string>
    <string
        name="app_version">App version</string>
    <string
        name="app_authors">App authors</string>
    <string
        name="used_resources">Used resources</string>
    <string
        name="info_points">Points</string>
    <string
        name="info_categories">Climb categories</string>
    <string
        name="climbinfo_name">Climb name</string>
    <string
        name="climbinfo_slope">Length and slope</string>
    <string
        name="climbinfo_description">Description</string>
    <string
        name="climbinfo_author">Author</string>
    <string
        name="climbinfo_points">Points</string>
    <string
        name="climbinfo_category">Climb category</string>
    <string
        name="climbinfo_category2">Category</string>
    <string
        name="climbinfo_comments">Comments</string>
    <string
        name="climbinfo_nocomments">No comments</string>
    <string
        name="climbinfo_slopes">Slope data</string>
    <string
        name="climbinfo_map">Climb map</string>
    <string
        name="climbinfo_site">Climb page</string>
    <string
        name="climbinfo_region">Climb region</string>
    <string
        name="climbinfo_region_info">Show climbs from region</string>
    <string
        name="climbinfo_strava">Strava Segment</string>
    <string
        name="climbinfo_strava_segment">Show Strava segment</string>
    <string
        name="settings_cat1">Show climbs from category</string>
    <string
        name="settings_cat2">to category</string>
    <string
        name="settings_elevation">Indicated elevation</string>
    <string
        name="settings_elevround">Slope rounding</string>
    <string
        name="settings_screen_orientation">Screen orientation</string>
    <string
        name="menu_map">Climb map</string>
    <string
        name="menu_settings">Settings</string>
    <string
        name="menu_informations">Informations</string>
    <string
        name="regionlist_region_name">Region name</string>
    <string
        name="regionlist_region_description">Region description</string>
    <string
        name="regionlist_show_climbs">Show climbs from region</string>
    <string-array
        name="menu">
        <item>Mapa podjazdów</item>
        <item>Ustawienia</item>
        <item>Informacje</item>
    </string-array>
    <string-array
        name="maptypes">
        <item>Road map</item>
        <item>Satellite map</item>
        <item>Satellite map (clear)</item>
        <item>Terrain map</item>
    </string-array>
    <string-array
        name="elevtypes">
        <item>Actual elevation</item>
        <item>Passed elevation</item>
        <item>Remaining elevation</item>
    </string-array>
    <string-array
        name="sloperoundtypes">
        <item>1 place after comma</item>
        <item>2 places after comma</item>
        <item>3 places after comma</item>
    </string-array>
    <string-array
        name="orientationtypes">
        <item>Vertical (phone)</item>
        <item>Horizontal (tablet)</item>
    </string-array>
    <string
        name="rangeseekbar_min_label">HC</string>
    <string
        name="rangeseekbar_max_label">7</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="menu_login" translatable="false">Login</string>
    <string name="menu_register" translatable="false">Register</string>
    <string name="menu_remind_password" translatable="false">Recover password</string>
    <string name="menu_about" translatable="false">About</string>
    <string name="menu_profile" translatable="false">Profile</string>
    <string name="menu_discovered" translatable="false">Discovered places</string>
    <string name="menu_todiscover" translatable="false">Places to discover</string>
    <string name="no_internet" translatable="false">No internet</string>
    <string name="no_internet2" translatable="false">No internet..</string>

    <string name="yes" translatable="false">Yes</string>
    <string name="no" translatable="false">No</string>

    <string name="enter_username" translatable="false">Podaj nazwę użytkownika</string>
    <string name="enter_email" translatable="false">Podaj e-mail</string>
    <string name="enter_new_password" translatable="false">Podaj nowe hasło</string>
    <string name="repeat_new_password" translatable="false">Powtórz nowe hasło</string>
    <string name="send_new_password" translatable="false">Wyślij nowe hasło</string>
    <string name="new_password_sent" translatable="false">Nowe hasło wysłane</string>
    <string name="register" translatable="false">Rejestracja</string>
    <string name="login" translatable="false">Logowanie</string>
    <string name="password" translatable="false">Hasło</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="recover_password" translatable="false">Przypomnij hasło</string>
    <string name="passwords_mismatch" translatable="false">Hasła nie sa takie same</string>
    <string name="email_with_spaces" translatable="false">E-mail zawiera space</string>
    <string name="email_not_correct" translatable="false">E-mail jest niepoprawny</string>
    <string name="login_too_short" translatable="false">Login za krótki</string>
    <string name="login_too_long" translatable="false">Login za długi</string>
    <string name="password_too_short" translatable="false">Hasło za krótkie</string>
    <string name="password_too_long" translatable="false">Hasło za długie</string>
    <string name="invalid_email_length" translatable="false">Niewłaściwa długość e-maila</string>
    <string name="no_errors" translatable="false">Brak błędów</string>
    <string name="register_ok" translatable="false">Zarejestrowano poprawnie</string>
    <string name="invalid_login_length" translatable="false">Niewłaściwa długość loginu</string>
    <string name="invalid_password_length" translatable="false">Niewłaściwa długość hasła</string>
    <string name="user_exist" translatable="false">Taki użytkownik już istnieje</string>
    <string name="email_exist" translatable="false">Wybrany e-mail już został użyty</string>
    <string name="unknown_error" translatable="false">Nieznany błąd</string>
    <string name="access_denied" translatable="false">Niewłaściwy login lub hasło</string>
    <string name="account_inactive" translatable="false">Konto nieaktywne</string>
    <string name="account_banned" translatable="false">Konto zbanowane</string>
    <string name="correct_form_errors" translatable="false">Popraw błędy w formularzu</string>
    <string name="logout" translatable="false">Wyloguj</string>
    <string name="open_thoughts_list" translatable="false">Najnowsze myśli</string>
    <string name="repeat_password" translatable="false">Powtórz hasło</string>

    <string name="activity_login" translatable="false">Login</string>
    <string name="activity_register" translatable="false">Register</string>
    <string name="activity_placemap" translatable="false">Place map</string>
    <string name="activity_logout" translatable="false">Logout</string>

    <string name="open_settings" translatable="false">Settings</string>
    <string name="open_friend_requests" translatable="false">Friend requests</string>
    <string name="open_friend_search" translatable="false">Friend search</string>
    <string name="open_friend_list" translatable="false">Friend list</string>

    <string name="place_map" translatable="false">Mapa miejsc</string>
    <string name="place_map0" translatable="false">Mapa wszystkich miejsc</string>
    <string name="place_map1" translatable="false">Mapa odwiedzonych miejsc</string>
    <string name="place_map2" translatable="false">Mapa nieodwiedzonych miejsc</string>
    <string name="place_map3" translatable="false">Mapa pobliskich miejsc</string>
    <string name="place_map4" translatable="false">Mapa pobliskich odwiedzonych miejsc</string>
    <string name="place_map5" translatable="false">Mapa pobliskich nieodwiedzonych miejsc</string>

    <string name="place_list" translatable="false">Lista miejsc</string>
    <string name="place_list0" translatable="false">Lista wszystkich miejsc</string>
    <string name="place_list1" translatable="false">Lista odwiedzonych miejsc</string>
    <string name="place_list2" translatable="false">Lista nieodwiedzonych miejsc</string>
    <string name="place_list3" translatable="false">Lista pobliskich miejsc</string>
    <string name="place_list4" translatable="false">Lista pobliskich odwiedzonych miejsc</string>
    <string name="place_list5" translatable="false">Lista pobliskich nieodwiedzonych miejsc</string>
</resources>