<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_todiscover"
        android:orderInCategory="100"
        android:title="@string/menu_todiscover" />

    <item
        android:id="@+id/menu_discovered"
        android:orderInCategory="110"
        android:title="@string/menu_discovered" />

    <item
        android:id="@+id/menu_quests"
        android:orderInCategory="120"
        android:title="@string/menu_informations" />

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="130"
        android:title="@string/menu_profile" />

    <item
        android:id="@+id/menu_info"
        android:orderInCategory="140"
        android:title="@string/menu_settings" />

    <item
        android:id="@+id/menu_logout"
        android:orderInCategory="150"
        android:title="@string/menu_about" />


</menu>
