<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:id="@+id/main_layout" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/enter_email"
                    android:textSize="22dp"
                    android:id="@+id/email_text" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text=""
                    android:textSize="22dp"
                    android:ems="10"
                    android:inputType="textNoSuggestions|text"
                    android:id="@+id/email_field" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/enter_new_password"
                    android:textSize="22dp"
                    android:id="@+id/password_text" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text=""
                    android:textSize="22dp"
                    android:ems="10"
                    android:inputType="textNoSuggestions|textPassword"
                    android:id="@+id/password_field" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/repeat_new_password"
                    android:textSize="22dp"
                    android:id="@+id/password_text2" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text=""
                    android:textSize="22dp"
                    android:ems="10"
                    android:inputType="textNoSuggestions|textPassword"
                    android:id="@+id/password_field2" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/send_new_password"
                    android:onClick="recoverPasswordClicked"
                    android:id="@+id/recover_password_button" />

            </LinearLayout>
        </ScrollView>
    </FrameLayout>

    <ListView
        android:id="@+id/drawerList"
        android:entries="@array/menu1"
        android:divider="@null"
        android:layout_width="@dimen/drawer_left_width"
        android:layout_height="match_parent"
        android:layout_gravity="left" >
    </ListView>

</android.support.v4.widget.DrawerLayout>
